--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -83,6 +83,11 @@ body {
         &#sidebar {
             width: 250px;
         }
+        @media (max-width: 797px) {
+            &#sidebar {
+                width: 155px;
+            }
+        }
         &#stage > div > div {
             padding: 0 15px 0 12px;
         }
