--- a/src/js/app/components/items/index.html
+++ b/src/js/app/components/items/index.html
@@ -9,7 +9,7 @@
             <template v-if="items.length">
                 <h5>{{storages[storage].label || storage}}</h5>
                 <div :is="layout" v-ref:items :items="items.filter($root.visible)" :storage="storage" :limit="10"></div>
-                <span v-if="$refs.items && $refs.items.limit && items.filter($root.visible).length > $refs.items.limit" v-on:click.prevent="selectStorage(storage)" class="btn btn-link">Show all...</span>
+                <span v-if="$refs.items && $refs.items.limit && items.filter($root.visible).length > $refs.items.limit" v-on:click.prevent="selectStorage(storage)" class="btn btn-link">{{t('stage.showAll')}}</span>
             </template>
         </template>
     </div>
